Fix to big top spacing on front page

--- a/frontend/css/default.css
+++ b/frontend/css/default.css
@@ -38,3 +38,8 @@ body {
     top: 100px;
     z-index: 1;
 }
+
+.main-container {
+    position: relative;
+    top: -70px;
+}
